--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,13 @@
     padding: 20px;
 }
 
+.navbar.navbar-default {
+    background-color: #3193d4;
+    color: white;
+  }
+  
+
+
 .filter-text {
     padding: 5px;
     color: #586069 !important;
